# lijo-finora

./: .gitignore  GEMINI_SETUP.md  QUICKSTART.md  README.md  USAGE_GUIDE.md  app.py  demo.py  example_usage.py  requirements.txt  setup.py  test_document.txt
client/: package-lock.json  package.json
client/src/: App.tsx
client/src/api/: index.ts
client/src/components/features/: StatusBar.tsx
client/src/pages/: ChatInterface.tsx  DocumentUpload.tsx  ExpenseCategories.tsx  SearchInterface.tsx
client/src/store/: index.ts
server/: .env.example  =4.45.0  main.py  pyproject.toml  requirements.txt
server/chroma_db/: chroma.sqlite3
server/md/: tmpqmhgazxo_docling_raw.md  tmpzj0mgx36_docling_raw.md
server/middleware/: auth.py  error_handler.py
server/models/: document.py
server/routes/: auth.py  chat.py  document.py  expenses.py  export.py  status.py
server/schemas/: auth.py  document.py
server/src/: chat_gemini.py  chat_groq.py  chroma_vector_store.py  document_processor.py  embeddings.py  vector_store.py
server/usecases/: chat_usecase.py  document_usecase.py  enhanced_categorizer.py  expense_usecase.py
server/utils/: config.py
src/: chat.py  document_processor.py  vector_store.py
